refactor: revert removing of script agg