@@ -9,7 +9,6 @@ package io.camunda.search.clients.transformers.aggregation;
 
 import static io.camunda.search.aggregation.IncidentProcessInstanceStatisticsByDefinitionAggregation.AGGREGATION_NAME_AFFECTED_INSTANCES;
 import static io.camunda.search.aggregation.IncidentProcessInstanceStatisticsByDefinitionAggregation.AGGREGATION_NAME_BY_DEFINITION;
-import static io.camunda.search.aggregation.IncidentProcessInstanceStatisticsByDefinitionAggregation.AGGREGATION_NAME_BY_TENANT;
 import static io.camunda.search.aggregation.IncidentProcessInstanceStatisticsByDefinitionAggregation.AGGREGATION_NAME_SORT_AND_PAGE;
 import static io.camunda.search.aggregation.IncidentProcessInstanceStatisticsByDefinitionAggregation.AGGREGATION_NAME_TOTAL_ESTIMATE;
 import static io.camunda.search.aggregation.IncidentProcessInstanceStatisticsByDefinitionAggregation.AGGREGATION_SCRIPT_LANG;
@@ -53,9 +52,9 @@ final class IncidentProcessInstanceStatisticsByDefinitionAggregationTransformerT
         aggregationTransformer.apply(Tuple.of(aggregation, transformers));
 
     // then
-    assertThat(aggregators).hasSize(1);
+    assertThat(aggregators).hasSize(2);
 
-    assertThat(aggregators.getFirst())
+    assertThat(aggregators.get(0))
         .isInstanceOfSatisfying(
             SearchTermsAggregator.class,
             byDefinition -> {
@@ -67,7 +66,7 @@ final class IncidentProcessInstanceStatisticsByDefinitionAggregationTransformerT
               assertThat(byDefinition.getAggregations())
                   .extracting(SearchAggregator::getName)
                   .containsExactlyInAnyOrder(
-                      AGGREGATION_NAME_BY_TENANT, AGGREGATION_NAME_SORT_AND_PAGE);
+                      AGGREGATION_NAME_AFFECTED_INSTANCES, AGGREGATION_NAME_SORT_AND_PAGE);
 
               assertThat(byDefinition.getAggregations())
                   .anySatisfy(
